   long standing http bug (.jar was sent twice) fixed by a friend of Karl named Mike
   http options in cargs
   when closing a client and no longer listening for new ones, don't crash
   fixed a bug with ClientConnectionGone
   endianness is checked at configure time
   fixed a bug that prevented the first client from being closed
   fixed that annoying "libvncserver-config --link" bug
   make rfbReverseByte public (for rdp2vnc)
   fixed compilation on OS X, IRIX, Solaris
   install target for headers is now ${prefix}/include/rfb ("#include <rfb/rfb.h>")
   renamed "sraRegion.h" to "rfbregion.h"
   CARD{8,16,32} are more standard uint{8,16,32}_t now
   fixed LinuxVNC colour handling
   fixed a bug with pthreads where the connection was not closed
   moved vncterm to main package (LinuxVNC included)
   portability fixes (IRIX, OSX, Solaris)
   more portable way to determine endianness and types of a given size
	through autoconf based methods
0.5
   autoconf'ed the whole package (including optional support for zlib,
	pthreads and libjpeg as well as zrle/c++)
   moved appropriate files to contrib/ and examples/ respectively
   fixed long standing cargs bug (Justin "Zippy" Dearing)
   Even better x11vnc from Karl J. Runge! (supports different kbd layouts of
	client/server)
   Better x11vnc from Karl J. Runge!
   fixed severe bug (Const Kaplinsky)
   got patch from Const Kaplisnky with CursorPosUpdate encoding and some Docs
   sync'ed with newest RealVNC (ZRLE encoding)
   a HTTP request for tunnelling was added (to fool strict web proxies)
   sync'ed with TightVNC 1.2.5
0.4
   support for NewFB from Const Kaplinsky
   memory leaks squashed (localtime pseudo leak is still there :-)
   small improvements for OSXvnc (still not working correctly)
   synced with TightVNC 1.2.3
   solaris compile cleanups
   many x11vnc improvements
   added backchannel, an encoding which needs special clients to pass
	arbitrary data to the client