@@ -10,3 +10,6 @@ vncev
 Makefile.in
 .deps
 colourmaptest
+simple
+simple15
+
