@@ -1,0 +1,10 @@
+#include <rfb/rfb.h>
+
+int main(int argc,char** argv)
+{                                                                
+  rfbScreenInfoPtr server=rfbGetScreen(&argc,argv,400,300,8,3,4);
+  server->frameBuffer=malloc(400*300*4);
+  rfbInitServer(server);           
+  rfbRunEventLoop(server,-1,FALSE);
+  return(0);
+}
