@@ -66,7 +66,7 @@ libvncserver; try CVS until I release 0.6.
     The simplest server looks like this:<br><br>
 
 <pre>
-#include <rfb/rfb.h>
+#include &lt;rfb/rfb.h&gt;
 
 int main(int argc,char** argv)
 {
